# PtychoNN

./: .gitattributes  .gitignore  AD_LTEM_sim_data.ipynb  LICENSE  MANIFEST.in  README.md  keras_helper.py  pyproject.toml  requirements-dev  setup.cfg  str_history.npy  test_network.ipynb  test_sparse_sampling.ipynb  train_network.ipynb  train_test_limited_data.ipynb  v4_struct_phase.ipynb
.ipynb_checkpoints/: test_network-checkpoint.ipynb  train_network-checkpoint.ipynb  train_test_limited_data-checkpoint.ipynb
Conitnual learning/: agx_update.py  downscaled_1_update_ptychonn_model.py  helper_small_model.py  ptychonn_update_model.py  slack_update.py
Continual Learning/Inference/: README  helper_small_model.py  infer_workflow.py
Continual Learning/Training/: README  agx_update.py  custom_logger.py  dataPrepPtychoNN_tiff.py  slack_update.py  small_1_ptychonn_model.py
PyTorch/: train.ipynb  train_mixed_precision.ipynb  train_noplotting.ipynb
PyTorch/CNN_encoder_decoder/: train.ipynb  train_mixed_precision.ipynb  train_noplotting.ipynb  (+1 more)
TF2/: keras_helper.py  str_history.npy  tf2_test_network.ipynb  tf2_test_ptychoNN_lamni.ipynb  tf2_train_network.ipynb  tf2_train_network_mixed_precision.ipynb
data/: 20191008_39_amp_pha_10nm_full.npy  20191008_39_diff.npz  20191008_39_diff_reduced.npz  X_test.npy  Y_I_test.npy  Y_phi_test.npy
ptychonn/: __init__.py  __main__.py  _model.py  model.py  plot.py
tests/: __init__.py  construct_test_data.py  pospred_readme.md  test_multiiter_pos_calculation.py  test_ptychonn.py
wts4/: min_epoch.npy
wts5/: min_epoch.npy
(+41 files in other folders)
