[metadata]
name = ptychonn

[options]
include_package_data = True
packages = find:
install_requires =
    click
    h5py
    importlib-metadata; python_version < "3.8"
    importlib-resources; python_version < "3.7"
    matplotlib
    numpy ~=1.21
    torch
    scikit-image
    scipy
    tqdm

[options.entry_points]
console_scripts =
    ptychonn = ptychonn.__main__:main

[options.packages.find]
include = ptychonn*
