[metadata]
name = ptychonn

[options]
include_package_data = True
packages = find:
install_requires =
    click
    importlib-metadata; python_version < "3.8"
    matplotlib
    numpy ~=1.21
    torch >=1.12,<2.1
    scikit-image
    scipy
    tqdm
    lightning >=2.1.3,<3

[options.entry_points]
console_scripts =
    ptychonn = ptychonn.__main__:main

[options.packages.find]
include = ptychonn*
