[metadata]
name = ptychonn

[options]
include_package_data = True
packages = find:
install_requires =
    click
    h5py
    importlib-metadata; python_version < "3.8"
    lightning >=2.1.3,<3
    matplotlib
    numpy ~=1.21
    pandas
    scikit-image
    scikit-learn
    scipy
    tifffile
    torch >=1.12,<2.1
    tqdm

[options.entry_points]
console_scripts =
    ptychonn = ptychonn.__main__:main

[options.packages.find]
include = ptychonn*
